<resources>
    <string name="app_name">Dr.Robot</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="learning_stuff">
  <![CDATA[
    <p><strong>Influenza</strong></p>
<ul>
<li>Fever</li>
<li>Chills</li>
<li>Muscle aches</li>
<li>Cough</li>
<li>Congestion</li>
<li>Runny nose</li>
<li>Sneezes</li>
<li>Headaches</li>
<li>Fatigue</li>
</ul>
<p><strong>Dysentery</strong></p>
<ul>
<li>Bloody diarrhoea</li>
<li>Abdominal pain</li>
<li>Cramps</li>
<li>Fever</li>
<li>A general feeling of discomfort</li>
<li>Inability to empty bowels</li>
<li>Indigestion</li>
<li>Nausea</li>
<li>Vomiting</li>
<li>Flatulence</li>
</ul>
<p><strong>Hepatitis</strong></p>
<ul>
<li>Yellowing of the eyes</li>
<li>Fatigue</li>
<li>Loss of appetite</li>
<li>General feeling of discomfort</li>
<li>Abdominal pain</li>
<li>Dark urine</li>
<li>Itching</li>
<li>Swelling</li>
</ul>
<p><strong>Dengue</strong></p>
<ul>
<li>Abdominal Pain</li>
<li>Muscle Ache</li>
<li>Chills</li>
<li>Fatigue</li>
<li>Fever</li>
<li>Loss of appetite</li>
<li>Nausea</li>
<li>Vomiting</li>
<li>Rashes</li>
<li>Easy bruising</li>
<li>Headache</li>
<li>Sore throat</li>
</ul>
<p><strong>Malaria</strong></p>
<ul>
<li>Muscle Ache</li>
<li>Chills</li>
<li>Fatigue</li>
<li>Fever</li>
<li>Malaise</li>
<li>Shivering</li>
<li>Sweating</li>
<li>Fast heart rate</li>
<li>Headache</li>
<li>Nausea</li>
<li>Unhealthy pale appearance</li>
</ul>
<p><strong>Typhoid</strong></p>
<ul>
<li>High fever</li>
<li>Chills</li>
<li>Severe diarrhoea</li>
<li>Headache</li>
</ul>
<p><strong>Appendicitis</strong></p>
<ul>
<li>Abdominal pain</li>
<li>Chills</li>
<li>Fever</li>
<li>Loss of appetite</li>
<li>General feeling of discomfort</li>
<li>Nausea</li>
<li>Vomiting</li>
<li>Abdominal tenderness</li>
</ul>
<p><strong>Gastroenteritis</strong></p>
<ul>
<li>Stomach pain</li>
<li>Uneasiness of the stomach - vomiting</li>
<li>Decreased body weight</li>
<li>Sore to touch ???</li>
<li>Yellow eyes, like jaundice</li>
<li>Fever</li>
<li>Muscle pain</li>
<li>Retch - To have the action of vomiting, but not actually expelling vomit</li>
</ul>
<p><strong>Diarrhoea</strong></p>
<ul>
<li>Abdominal cramps</li>
<li>Abdominal pains</li>
<li>Urgency to go to the toilet</li>
<li>Frequent passing of loose, watery faeces</li>
<li>Nausea</li>
<li>Vomiting.</li>
</ul>
<p><strong>Cholera </strong></p>
<ul>
<li>Dehydration</li>
<li>Dry mouth</li>
<li>feeling weak</li>
<li>Diarrhoea</li>
<li>Vomiting</li>
<li>Fever</li>
<li>Hunger</li>
<li>Stomach pain</li>
</ul>
<p><strong>Common</strong> <strong>Cold</strong></p>
<ul>
<li>Cough</li>
<li>Muscle pain</li>
<li>Runny nose,</li>
<li>Congestion</li>
<li>sneezing</li>
<li>Fever</li>
<li>Chills</li>
<li>Sore throat</li>
<li>Phlegm while coughing</li>
<li>Fatigue</li>
<li>Tiredness/sleepiness</li>
<li>Headache</li>
<li>Dizziness</li>
<li>Muscle pain</li>
<li>Loss of appetite</li>
</ul>
<p><strong>Food poisoning </strong></p>
<ul>
<li>Uneasiness</li>
<li>Vomiting</li>
<li>Diarrhoea</li>
<li>Loss of appetite</li>
<li>Indigestion</li>
<li>Weakness</li>
<li>Dizziness</li>
<li>Tiredness</li>
<li>Stomach pain</li>
<li>Fevers</li>
<li>Dehydration</li>
</ul>
<p><strong>Gastritis</strong></p>
<ul>
<li>Stomach pain</li>
<li>Vomiting</li>
<li>Uneasiness</li>
<li>Dizziness</li>
<li>Loss of appetite</li>
<li>Indigestion</li>
</ul>
<p><strong>Conjunctivitis</strong></p>
<ul>
<li>Redness in one or both eyes</li>
<li>Itchiness in one or both eyes</li>
<li>A gritty feeling in one or both eyes</li>
<li>A discharge in one or both eyes that forms a crust during the night that may prevent your eye or eyes from opening in the morning</li>
<li>Tearing</li>
</ul>
<p><strong>Encephalitis</strong></p>
<ul>
<li>Headache</li>
<li>Fever</li>
<li>Aches in muscles or joints</li>
<li>Fatigue or weakness</li>
<li>Confusion, agitation or hallucinations</li>
<li>Seizures</li>
<li>Loss of sensation or paralysis in certain areas of the face or body</li>
<li>Muscle weakness</li>
<li>Problems with speech or hearing</li>
<li>Loss of consciousness</li>
</ul>]]></string>

    <string-array name="symptom_list">
        <item>Fever</item>
        <item>Chills</item>
        <item>Cough</item>
        <item>Muscle ache</item>
        <item>Sneezing</item>
        <item>Headache</item>
        <item>Fatigue</item>
        <item>Congestion</item>
        <item>Bloody diarrhoea</item>
        <item>Abdominal pain</item>
        <item>Inability to empty bowels</item>
        <item>Cramps</item>
        <item>Indigestion</item>
        <item>Vomiting</item>
        <item>Flatulence</item>
        <item>Nausea</item>
        <item>Yellowing of eyes</item>
        <item>Loss of appetite</item>
        <item>Dark urine</item>
        <item>Itching</item>
        <item>Swelling</item>
        <item>Body pain</item>
        <item>Rashes</item>
        <item>Easy bruising</item>
        <item>Sore throat</item>
        <item>Sweating</item>
        <item>Shivering</item>
        <item>Fast heart rate</item>
        <item>Diarrhoea</item>
        <item>Abdominal tenderness</item>
        <item>Decreased body weight</item>
        <item>Retching</item>
        <item>Dehydration</item>
        <item>Dry mouth</item>
        <item>Hunger</item>
        <item>Stomach pain</item>
        <item>Dizziness</item>
        <item>Tiredness</item>
        <item>Weakness</item>
        <item>Redness of eyes</item>
        <item>Itching of eyes</item>
        <item>Discharge from eyes</item>
        <item>Tearing up of eyes</item>
        <item>Runny nose</item>
        <item>Paralysis</item>
        <item>Confusion</item>
        <item>Coughing blood</item>
        <item>Night sweats</item>
        <item>Coughing phlegm</item>
    </string-array>

    <string-array name="questions">
        <item>Have you had a fever?</item>
        <item>Have you suddenly felt cold?</item>
        <item>Have you been coughing?</item>
        <item>Are your muscles paining?</item>
        <item>Are you sneezing frequently?</item>
        <item>Has your head been aching?</item>
        <item>Have you been feeling tired?</item>
        <item>Have you had a blocked nose?</item>
        <item>Has there been blood in your diarrhoea?</item>
        <item>Have you had pain in or near your stomach?</item>
        <item>Are you unable to pass stool?</item>
        <item>Do you have an uneasy feeling in your stomach, usually after eating?</item>
        <item>Have you vomited?</item>
        <item>Do you feel that you have a buildup of gas in your stomach?</item>
        <item>Have you been having an uneasy sensation to vomit?</item>
        <item>Do your eyes seem to be yellow?</item>
        <item>Have you been eating properly?</item>
        <item>Is your urine darker than usual?</item>
        <item>Are you experiencing itching?</item>
        <item>Is any part of your body swollen?</item>
        <item>Are you experiencing body pains?</item>
        <item>Have you noticed rashes on your body?</item>
        <item>Have you noticed that you get bruises easily?</item>
        <item>Do you have a sore throat?</item>
        <item>Have you been sweating more than usual?</item>
        <item>Have you had bouts of shivering?</item>
        <item>Is your heart beating fast, even at rest?</item>
        <item>Have you had diarrhoea?</item>
        <item>Do you feel pain when you touch/press around your stomach?</item>
        <item>Have you noticed yourself losing weight in the duration of your sickness?</item>
        <item>Have you had a sensation to vomit, but were unable to?</item>
        <item>Have you been feeling weak, and feeling thirsty?</item>
        <item>Have you noticed your mouth getting dry?</item>
        <item>Have you had excess hunger?</item>
        <item>Have you had stomach pain?</item>
        <item>Have you been feeling dizzy?</item>
        <item>Have you been feeling more tired than usual?</item>
        <item>Have you been feeling weak?</item>
        <item>Are you eyes redder than usual?</item>
        <item>Are your eyes itching?</item>
        <item>Is there some discharge on your eyelids in the morning?</item>
        <item>Have your eyes been watering?</item>
        <item>Has your nose been running?</item>
        <item>Have you experienced a loss of sensation in any part of your body?</item>
        <item>Have you been confused, or had hallucinations?</item>
        <item>Have you coughed up blood?</item>
        <item>Have you been sweating profusely, especially in the night?</item>
        <item>Have you coughed up phlegm?</item>

    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    
    <string name="help_intro">
        Hello, and thanks for using the Dr. Robot app!! Dr. Robot is a tool meant for preliminary diagnosis, i.e., you yourself can
        check if you have a disease in case you have felt under the weather. It works by asking you a series of questions, and narrowing
        down on a disease you might have, depending on your responses.
    </string>
    <string name="help_disc_head">
        DISCLAIMER
    </string>
    <string name="help_disclaimer">
         DR. ROBOT IS AN APP. IN NO WAY CAN IT REPLACE PROFESSIONAL MEDICAL ADVICE FROM A DOCTOR OR NURSE. PLEASE CONSULT
        A DOCTOR IN CASE YOUR SYMPTOMS HAVE BECOME WORSE, OR YOU HAVE BEEN DIAGNOSED WITH A SERIOUS DISEASE. PLEASE DO NOT CONSUME 
        MEDICINES BASED ON THE DIAGNOSIS WITHOUT A DOCTOR\'S PRESCRIPTION. AS MENTIONED, DR. ROBOT HELPS IN PRELIMINARY DIAGNOSIS; IT CAN
        DIAGNOSE YOU BASED ON SYMPTOMS YOU HAVE EXPERIENCED. IT DOES NOT TAKE INTO ACCOUNT ANY UNDERLYING CONDITIONS, OR RANGES OF TIME 
        FOR WHICH THE SYMPTOMS HAVE BEEN PREVALENT.
    </string>
    <string name="help_steps">
        Steps to make a Diagnosis
    </string>
    <string name="help_step_1">
        1) You are here since you have successfully signed up with your credentials. Note that you can change your password, email address
        etc. using Settings.
    </string>
    <string name="help_step_2">
        2) Click on \'Perform a quick diagnosis\' in the drawer menu. You will be prompted to add symptoms. Please add atleast
        3 and atmost 5 symptoms, and restrict them to those prompted by the autocomplete options. You can check out all the symptoms
        in the \'Learn more\' section in the menu. Click the \'Diagnose\' button to submit your symptoms.
    </string>
    <string name="help_step_3">
        3) From there, pairs of questions will be asked, and you are simply required to answer Yes/No. If you are unsure whether you
        have the symptom, ask someone who has observed you through the course of your sickness. The number of questions asked depends
        on the responses you give; please do not be alarmed if too many questions are being thrown at you!
    </string>
    <string name="help_step_4">
        4) The app will inform you of its decision, as soon as it has narrowed it down from the list of diseases. You can check previous
        diagnoses from the \'History\' option in the menu.
    </string>
    <string name="contactinfo">
        The Dr. Robot app was created and is maintained by Poorna Chandra Tejasvi, Manas Deka, and Bryan Robert.
    </string>
    <string name="contactdetails">
        To send feedback about the app, fill out the form below
    </string>
    <string name="hint">Add feedback here</string>
    <string name="buttonstuff">Send</string>
</resources>
