<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_intro"
                android:id="@+id/intro"/>
            <TextView
                android:id="@+id/disc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_disclaimer"
                android:textStyle="bold"
                android:layout_below="@+id/intro"/>

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disc"
                android:text="@string/help_steps"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>